--- a/infra/package.json
+++ b/infra/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.139.0",
-    "constructs": "^10.3.0"
+    "constructs": "^10.3.0",
+    "dotenv": "^16.5.0"
   }
 }
